Removing some now unused files. For the verge, the disclaimer now looks a little better and attaches to a logical location.

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   "content_scripts": [
     {
       "matches": ["*://*.theverge.com/*"],
-      "js": ["potentialBiasContent.js"]
+      "js": ["potentialBiasContent.js"],
+      "css": ["potentialBias.css"]
     }
   ],
   "manifest_version": 2
